2009-02-24  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.h
	* src/protocol.c
	(lastfm_set_radio):
	Store the radio title returned in the 'stationname' parameter.
	(lastfm_request_playlist, lastfm_parse_playlist)
	(lastfm_request_custom_playlist):
	Use the aforementioned 'stationname' if no playlist title is
	returned by the XSPF request.

	* src/controller.c
	(controller_play_radio_by_url_thread)
	(start_playing_get_pls_thread):
	Use the playlist title returned by lastfm_set_radio.

	Fixes #3498 (Listening to... is broken)

2009-01-31  Alberto Garcia  <agarcia@igalia.com>

	* po/POTFILES.in
	* src/protocol.c (lastfm_parse_track): Check for NULL in the
	playlist (radio) title.

2008-09-02  Alberto Garcia  <agarcia@igalia.com>

	* debian/watch: Added debian/watch file

	* debian/control (Standards-Version): Updated to 3.8.0

2008-09-01  Alberto Garcia  <agarcia@igalia.com>

	=== Released Vagalume 0.7 ===

2008-09-01  Tim Wegener  <twegener@fastmail.fm>

	* vagalume.spec: Added 'libtool' to BuildRequires

2008-09-01  Alberto Garcia  <agarcia@igalia.com>

	* vagalume.spec: Updated for Vagalume 0.7

	* NEWS: Fixed typo

2008-08-30  Alberto Garcia  <agarcia@igalia.com>

	* debian/changelog: Added entry for Vagalume 0.7

	* debian/rules: Removed extra comments.

	* README: Updated README file.

	* INSTALL: Updated installation instructions

2008-08-30  Alberto Garcia  <agarcia@igalia.com>

	* vagalume.1
	* src/userconfig.c (get_cfg_filename): config renamed to config.xml

2008-08-30  Alberto Garcia  <agarcia@igalia.com>

	* NEWS
	* configure.ac: Updated for the 0.7 release

2008-08-30  Alberto Garcia  <agarcia@igalia.com>

	* build-package.sh
	* debian/control.maemo2
	* debian/control.maemo3
	* debian/control.maemo4: Different control files for each Maemo
	version.

2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* debian/rules: Change the variable used to choose the target
	platform.

2008-08-29  Alberto Garcia  <agarcia@igalia.com>
